--- a/index.html
+++ b/index.html
@@ -168,49 +168,61 @@
             <section id="pendidikan" class="education-section">
     <h2 class="section-title">Pendidikan</h2>
     <div class="timeline">
-        <!-- Pendidikan 1 -->
-        <div class="timeline-item">
-            <div class="timeline-dot"></div>
-            <div class="timeline-content">
-                <img src="./images/smp.jpg" alt="SMA">
+         <!-- Pendidikan 1 -->
+    <div class="timeline-item">
+        <div class="timeline-dot"></div>
+        <div class="timeline-content">
+            <img src="./images/smp.jpg" alt="SMA Negeri 2 Karangpandan">
+
+            <div class="timeline-text">
                 <h3>SMA Negeri 2 Karangpandan</h3>
                 <span class="timeline-date">2017 – 2020</span>
                 <p>
                     Menempuh pendidikan menengah dengan jurusan IPA. 
-                    Aktif dalam kegiatan organisasi dan memiliki ketertarikan pada teknologi serta komputer.
-                </p>
-            </div>
-        </div>
-
-    <div class="timeline">
-        <!-- Pendidikan 1 -->
-        <div class="timeline-item">
-            <div class="timeline-dot"></div>
-            <div class="timeline-content">
-                <img src="./images/sma.jpg" alt="SMA">
-                <h3>SMA Muhammadiyah 1 Karanganyar</h3>
-                <span class="timeline-date">2017 – 2020</span>
-                <p>
-                    Menempuh pendidikan menengah dengan jurusan IPA. 
-                    Aktif dalam kegiatan organisasi dan memiliki ketertarikan pada teknologi serta komputer.
-                </p>
-            </div>
-        </div>
-
-        <!-- Pendidikan 2 -->
-        <div class="timeline-item">
-            <div class="timeline-dot"></div>
-            <div class="timeline-content">
-                <img src="./images/kuliah.png" alt="Universitas Telkom">
-                <h3>S1 Sistem Informasi – Telkom University</h3>
-                <span class="timeline-date">2020 – 2024</span>
-                <p>
-                    Fokus pada tata kelola TI, keamanan informasi, dan pengembangan sistem.
-                    Mengerjakan skripsi terkait ISO/IEC 27001:2022 dan manajemen keamanan informasi.
+                    Aktif dalam kegiatan organisasi dan mulai mengembangkan
+                    minat pada teknologi serta komputer.
                 </p>
             </div>
         </div>
     </div>
+
+    <!-- Pendidikan 2 -->
+    <div class="timeline-item">
+        <div class="timeline-dot"></div>
+        <div class="timeline-content">
+            <img src="./images/sma.jpg" alt="SMA Muhammadiyah 1 Karanganyar">
+
+            <div class="timeline-text">
+                <h3>SMA Muhammadiyah 1 Karanganyar</h3>
+                <span class="timeline-date">2017 – 2020</span>
+                <p>
+                    Mengikuti pendidikan menengah dengan jurusan IPA.
+                    Terlibat dalam kegiatan sekolah dan memiliki ketertarikan
+                    yang kuat pada bidang teknologi informasi.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Pendidikan 3 -->
+    <div class="timeline-item">
+        <div class="timeline-dot"></div>
+        <div class="timeline-content">
+            <img src="./images/kuliah.png" alt="Telkom University">
+
+            <div class="timeline-text">
+                <h3>S1 Sistem Informasi – Telkom University</h3>
+                <span class="timeline-date">2020 – 2024</span>
+                <p>
+                    Fokus pada tata kelola teknologi informasi, keamanan informasi,
+                    dan pengembangan sistem. Menyusun skripsi mengenai
+                    penerapan ISO/IEC 27001:2022 dan manajemen keamanan informasi.
+                </p>
+            </div>
+        </div>
+    </div>
+
+</div>
 </section>
 
 
