--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
     <h2 class="section-title">Pendidikan</h2>
     <div class="timeline">
          <!-- Pendidikan 1 -->
+      <!-- Pendidikan 1 -->
     <div class="timeline-item">
         <div class="timeline-dot"></div>
         <div class="timeline-content">
@@ -221,6 +222,8 @@
             </div>
         </div>
     </div>
+
+</div>
 
 </div>
 </section>
